update swagger (+log, tags), cleaup package.json, add mvn to update swagger
