# api/openapi.yaml
@@ -1,72 +1,102 @@
-# prettier-ignore
-openapi: 3.0.9
+openapi: 3.0.3
 info:
   title: API for project 3d-inventory
   description: Run CRUD od 3d-inventory data model.
   version: 1.0.3
 servers:
+  # Added by API Auto Mocking Plugin
+  - description: SwaggerHub API Auto Mocking
+    url: https://virtserver.swaggerhub.com/karol-preiskorn/ultima-rest/1.0.3
   - url: 'http://localhost:8080'
     description: 3d-inventory-oracle-api
+
 paths:
   /device/{deviceId}:
-    parameters:
-    - name: deviceId
-      in: path
-      required: true
-      description: Parameter deviceId is string uuid
-      schema:
-        type : string
     get:
       summary:
         Get Device Id
       description:
-        Get information about devices.
-
+        Get list devices.
       operationId: deviceGET
+      parameters:
+      - name: deviceId
+        in: path
+        required: true
+        description: Parameter deviceId is string uuid
+        schema:
+          type : string
       responses:
         '200':
-          description: OK
+          description: List of devices
           content:
             application/json:
               schema:
+                type: array
                 $ref: '#/components/schemas/Device'
-              examples:
-                device_id:
-                  value: tall_turquoise_sheep
+        '404':
+          description: Devices not found
+          content:
+            application/json:
+              schema:
+                type: array
+                $ref: '#/components/schemas/Device'
       x-swagger-router-controller: Default
+      tags:
+        - device
 
     put:
-      summary: "Insert new device"
-      description: Create device.
+      summary:
+        "Update new device"
+      description:
+        Update device.
       parameters:
-        - name: deviceId
-          in: path
-          required: true
-          description: Parameter deviceId is string uuid
-          schema:
-            type : string
+      - name: deviceId
+        in: path
+        required: true
+        description: Parameter deviceId is string uuid
+        schema:
+          type : string
       operationId: devicePUT
-      responses:
-        '200':
-          description: OK
-
-    post:
-      summary: Insert new device
-      description: Create device.
-      parameters:
-        - name: deviceId
-          in: path
-          required: true
-          description: Parameter deviceId is string uuid
-          schema:
-            type : string
-      operationId: devicePOST
       requestBody:
         content:
           application/json:
             schema:
               $ref: '#/components/schemas/Device'
+      responses:
+        '200':
+          description: Ok
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Device'
+        '404':
+          description: No found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      x-swagger-router-controller: Default
+      tags:
+        - device
+
+    post:
+      summary: Create new device
+      description: Create device.
+      operationId: devicePOST
+      parameters:
+      - name: deviceId
+        in: path
         required: true
+        description: Parameter deviceId is string uuid
+        schema:
+          type : string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Device'
+            example:
+              $ref: '#/components/schemas/Device/example'
       responses:
         '200':
           description: Ok
@@ -85,6 +115,8 @@ paths:
               example:
                 $ref: '#/components/schemas/Error'
       x-swagger-router-controller: Default
+      tags:
+        - device
 
     delete:
       summary: Insert new device
@@ -101,6 +133,8 @@ paths:
         '200':
           description: OK
       x-swagger-router-controller: Default
+      tags:
+        - device
 
   /log/{logId}:
     get:
@@ -146,8 +180,10 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/responses/5XX'
-              x-swagger-router-controller: Default      
-              
+              x-swagger-router-controller: Default
+      tags:
+        - log
+
     put:
       summary:
         Update new log
@@ -178,6 +214,8 @@ paths:
                 message:
                   value: 'Message in log'
       x-swagger-router-controller: Default
+      tags:
+        - log
 
     post:
       summary:
@@ -214,7 +252,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/responses/5XX'
+                $ref: '#/components/schemas/Log'
               example:
                 $ref: '#/components/responses/5XX'
         '404':
@@ -222,10 +260,10 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/responses/404'
-              example:
-                $ref: '#/components/responses/404'
+                $ref: '#/components/schemas/Log'
       x-swagger-router-controller: Default
+      tags:
+        - log
 
     delete:
       summary: Delete log
@@ -244,47 +282,49 @@ paths:
         '200':
           description: OK
       x-swagger-router-controller: Default
+      tags:
+        - log
 
   /connections:
     get:
       summary: >-
         Server heartbeat operation. Get information about connection between Devices.
-      description: >-
-        This operation shows how to override the global security defined above,
-        as we want to open it up for all users.
+      description: Connection between devices
       operationId: connectionsGET
       responses:
         '200':
           description: OK
       x-swagger-router-controller: Default
+      tags:
+        - connection
 
   /attributes:
     get:
-      summary: Server heartbeat operation. Get information about devices attributes.
-      description: >-
-        This operation shows how to override the global security defined above, as we want to open it up for all users.
-      operationId: attributesGET
+      description: Devices attributes
       responses:
         '200':
           description: OK
       x-swagger-router-controller: Default
+      tags:
+        - attributes
 
   /attributes_types:
     get:
       summary: >-
         Server heartbeat operation. Get information about devices attributes types.
-      description: >-
-        This operation shows how to override the global security defined above, as we want to open it up for all users.
+      description: Dictionary attributes types of specific type of device.
       operationId: attributes_typesGET
       responses:
         '200':
           description: OK
       x-swagger-router-controller: Default
+      tags:
+        - attributes
 
 components:
 
   schemas:
-  
+
     Device:
       required:
         - device_id
@@ -300,10 +340,37 @@ components:
         device_type:
           type: string
       example:
-        device_name: device-A1
-        device_id: 91601de6-6e93-11ed-a1eb-0242ac120002
-        device_type: Server
-        device_category: Network
+        - device_name: device-A1
+          device_id: 91601de6-6e93-11ed-a1eb-0242ac120002
+          device_type: Server
+          device_category: Network
+
+    DeviceArray:
+      required:
+        - device_id
+        - device_name
+      type: array
+      items:
+        type: object
+        properties:
+          device_id:
+            type: string
+          device_name:
+            type: string
+          device_category:
+            type: string
+          device_type:
+            type: string
+        example:
+          - device_name: device-A1
+            device_id: 91601de6-6e93-11ed-a1eb-0242ac120002
+            device_type: Server
+            device_category: Network
+          - device_name: dev-2
+            device_id: 91eweqweqwe601de6-6e93-11ed-a1eb-0242ac120002
+            device_type: Router
+            device_category: Network
+      description: List of devices
 
     Error:
       type: object
@@ -318,6 +385,7 @@ components:
         errNum: '404'
         message: 'Error example app not work...'
         offset: 'line 10022'
+      description: Universal Oracle error logs from database
 
     Log:
       type: object
@@ -339,6 +407,7 @@ components:
         id: '102'
         date: '2023-03-12 14:00'
         message: 'Meaasge in log'
+      description: Save information about application upsage
 
   responses:
     '200':
@@ -367,4 +436,3 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/Error'
-            
